# NanoKV

./: .gitignore  README.md  requirements.txt  setup.py
nkv/: __init__.py  nkv.py
nkv/cpp/: CMakeLists.txt  parser.cpp  parser.hpp
tests/: benchmark.py  tests.py
